[package]
name = "EspansoHelperEgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
eframe = { version = "0.23.0", features = ["glow"] }
egui = "0.23.0"
egui_extras = "0.23.0"
env_logger = "0.10.0"
rfd = "0.12.1"
winapi = "0.3.9"


[[bin]]
name="ja1"
path="src/main.rs"


[[bin]]
name="ja2"
path="src/playground1.rs"

